Customização do Botão

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,8 +23,6 @@
         android:hint="@string/hint_informe_sua_senha" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/label_conectar" />
-
+        style="@style/botao"
+        android:text="@string/label_conectar"/>
 </LinearLayout>
