--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="padding_padrao">16dp</dimen>
+
+    <dimen name="padding_padrao_botao_customizado">16dp</dimen>
+    <dimen name="radius_padrao_botao_customizado">4dp</dimen>
+    <dimen name="width_padrao_stroke_botao_customizado">1dp</dimen>
+    <dimen name="tamanho_texto_botao">16sp</dimen>
+
 </resources>
