--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,19 +10,41 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/inputLogin">
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_informe_seu_login" />
     </android.support.design.widget.TextInputLayout>
 
-    <EditText
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/inputSenha"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_informe_sua_senha"
+            android:inputType="textPassword" />
+
+    </android.support.design.widget.TextInputLayout>
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_informe_sua_senha" />
+        android:id="@+id/tvMensagem"
+        tools:text="Minha Mensagem"
+        tools:visibility="visible"
+        android:visibility="gone"
+        android:gravity="center"
+        android:padding="@dimen/padding_padrao"
+        android:textStyle="bold"
+        />
+
 
     <Button
         style="@style/botao"
-        android:text="@string/label_conectar"/>
+        android:text="@string/label_conectar"
+        android:onClick="conectar"/>
 </LinearLayout>
