Criacao do layout de loading

--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -1,112 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_pedidos"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/padding_padrao"
-    android:orientation="vertical"
-    tools:context="br.com.fiap.pizzaria.PedidoActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Selecione a pizza"
-        android:layout_marginBottom="16dp"/>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
+        android:id="@+id/activity_pedidos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/padding_padrao"
+        tools:context="br.com.fiap.pizzaria.PedidoActivity">
 
-        <CheckBox
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Atum"
-            android:layout_weight="0.5"
-            android:id="@+id/cbAtum"/>
+            android:layout_marginBottom="16dp"
+            android:text="Selecione a pizza" />
 
-        <CheckBox
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Bacon"
-            android:layout_weight="0.5"
-            android:id="@+id/cbBacon"/>
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/cbAtum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="Atum" />
+
+            <CheckBox
+                android:id="@+id/cbBacon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="Bacon" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/cbCalabresa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="Calabresa" />
+
+            <CheckBox
+                android:id="@+id/cbMussarela"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="Mussarela" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
+            android:text="Tamanho da Pizza" />
+
+        <RadioGroup
+            android:id="@+id/rgTamanhoPizza"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/rbTamanhoPequena"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pequena" />
+
+            <RadioButton
+                android:id="@+id/rbTamanhoMedia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Media" />
+
+            <RadioButton
+                android:id="@+id/rbTamanhoGrande"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Grande" />
+        </RadioGroup>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
+            android:text="Forma de Pagamento" />
+
+        <Spinner
+            android:id="@+id/spTipoPagamento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/opcoes_pagamento">
+
+        </Spinner>
+
+        <Button
+            android:id="@+id/btFecharPedido"
+            style="@style/botao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="Fechar Pedido" />
+
+
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Calabresa"
-            android:layout_weight="0.5"
-            android:id="@+id/cbCalabresa"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mussarela"
-            android:layout_weight="0.5"
-            android:id="@+id/cbMussarela"/>
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tamanho da Pizza"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"/>
-
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rgTamanhoPizza">
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pequena"
-            android:id="@+id/rbTamanhoPequena"/>
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Media"
-            android:id="@+id/rmTamanhoMedia"/>
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Grande"
-            android:id="@+id/rmTamanhoGrande"/>
-    </RadioGroup>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Forma de Pagamento"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"/>
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/opcoes_pagamento"
-        android:id="@+id/spTipoPagamento">
-
-    </Spinner>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fechar Pedido"
-        style="@style/botao"
-        android:layout_marginTop="32dp"
-        android:id="@+id/btFecharPedido"/>
-</LinearLayout>
+</FrameLayout>
 
 
